--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			border: 2px solid white;
+			border: 2px solid var(--main-color);
 			width: 50px;
 			height: 50px;
 		}
