padding vars fallback

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			width: 100%;
 			max-width: 1250px;
 			margin: 0 auto;
-			padding: var(--vert-padding) var(--side-padding);
+			padding: var(--vert-padding, 3em) var(--side-padding, 1.7em);
 			background-color: var(--back-color);
 		}
 		
