--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 	</style>
 </head>
 <body>
-	<!-- Don't forget to put fill out alts and aria-label's -->
+	<!-- Don't forget to fill out alts and aria-label's -->
 	<header class="header">
 		<a class="avatar" href="" aria-label="" title="">
 			<img class="avatar__image" src="https://placehold.co/120x120.png" alt="" width="40" height="40">
