get header height real time + on resize

--- a/index.html
+++ b/index.html
@@ -296,10 +296,10 @@
 		const menuLink = document.querySelectorAll('.popup-menu__link');
 		const firstLink = document.querySelector('.header__item:first-child');
 		// Get header height with and without px (used to shift for animation)
-		const headerHeightStr = getComputedStyle(header).getPropertyValue('height');
-		const headerHeight = parseInt(headerHeightStr, 10);
-		header.style.top = headerHeightStr;
 		function scrollHeader() {
+			let headerHeightStr = getComputedStyle(header).getPropertyValue('height');
+			let headerHeight = parseInt(headerHeightStr, 10);
+			header.style.top = headerHeightStr;
 			let pageTop = body.getBoundingClientRect().top;
 			if (pageTop < -headerHeight) {
 				header.style.top = '0px';
@@ -310,10 +310,11 @@
 				header.style.top = headerHeightStr;
 				header.classList.remove('header__menu_anim');
 				firstLink.classList.add('visually-hidden');
-			}	
+			}
 		}
 		window.addEventListener('scroll', scrollHeader);
 		window.addEventListener('DOMContentLoaded', scrollHeader);
+		window.addEventListener('resize', scrollHeader);
 		function closeMenu() {
 			menuButton.click();
 		}
