--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			justify-content: space-between;
 			align-items: center;
 			align-self: center; /*In case body is flexbox and you want to remove margin auto*/
+			gap: 1em;
 			width: 100%;
 			max-width: 1250px;
 			margin: 0 auto;
