добавил опцию с одним файлом

--- a/web-component/index.html
+++ b/web-component/index.html
@@ -12,6 +12,7 @@
 		}
 	</style>
 <script type="module" src="index.js"></script>
+<!-- <script defer src="one-file-header.js"></script> -->
 </head>
 <body>
 	<vallek-header></vallek-header>
