added logo and social links focus styles

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 		.avatar {
 			color: var(--main-color);
 			display: block;
+	border-radius: 50%;
+}	
+
+.avatar:focus {
+	outline: 2px dashed;
+	outline-offset: 2px;
 		}	
 		
 		.avatar__image {
@@ -94,6 +100,11 @@
 			color: var(--main-color);
 		}
 		
+.header__social-link:focus {
+	outline: 2px dashed;
+	outline-offset: 2px;
+}
+
 		.header__social-logo {
 			display: block;
 			width: var(--logo-size);
